Revise privacy policy content and structure
Updated the privacy policy to include detailed information on data collection, usage, and user rights.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Thalamus's privacy policy</title>
-    </head>
-    <body>
-        <h1>Thalamus's privacy policy</h1>
-        <h3>Camera permission</h3>
-        <p>
-            This app uses the device camera solely to scan QR codes. The scanned data is used to validate certain actions within the app.
-          We do not collect, store, or share any personal information obtained through the camera. All processing happens locally on the device.
-        </p>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Thalamus Privacy Policy</title>
+  </head>
+  <body>
+    <h1>Thalamus Privacy Policy</h1>
+
+    <p>
+      Thalamus is a corporate application (MES – Manufacturing Execution System)
+      intended for use by authorized users of specific companies. This Privacy
+      Policy explains how information is collected, used, and protected.
+    </p>
+
+    <h2>Personal Data Collection</h2>
+    <p>
+      To enable authentication and proper operation of the application, Thalamus
+      collects and stores the following personal data:
+    </p>
+    <ul>
+      <li>Name</li>
+      <li>Email address</li>
+      <li>Authentication information (access tokens)</li>
+    </ul>
+    <p>
+      These data are provided by the user in the context of corporate use and are
+      strictly necessary for account management and access control.
+    </p>
+
+    <h2>Use of Information</h2>
+    <p>
+      The collected information is used exclusively for:
+    </p>
+    <ul>
+      <li>User authentication and authorization</li>
+      <li>Account identification within the system</li>
+      <li>Operational activity logging and traceability</li>
+      <li>Security and proper functioning of the application</li>
+    </ul>
+
+    <h2>Visibility of Operational Records</h2>
+    <p>
+      In corporate environments, certain operational records (such as machine
+      inspection data and the identification of the responsible user) may be
+      visible to other authorized users within the same organization. This
+      visibility is limited to operational and internal control purposes.
+    </p>
+    
+    <h2>Camera and Image Access</h2>
+    <p>
+      Thalamus may request access to the device camera and photo gallery to support
+      features related to the application’s operational and functional use.
+    </p>
+    <p>
+      Such access may allow users to capture new images using the camera or select
+      existing images from their device gallery in order to document, validate, or
+      support activities performed within the system.
+    </p>
+    <p>
+      All images are provided voluntarily by the user and are used exclusively for
+      internal, operational, traceability, and quality-related purposes associated
+      with the application’s functionality.
+    </p>
+    <p>
+      Images may be stored and linked to system records and can be accessed only by
+      authorized users within the same organization. Thalamus does not access the
+      camera or gallery without user interaction, and does not use images for
+      tracking, advertising, or unrelated purposes.
+    </p>
+
+    <h2>Third-Party Services</h2>
+    <p>
+      Thalamus uses Firebase Crashlytics to collect crash reports and diagnostic
+      information. This data is technical in nature and is used exclusively to
+      improve application stability and performance. The information collected
+      by this service is not used for tracking or advertising purposes.
+    </p>
+
+    <h2>Data Sharing</h2>
+    <p>
+      We do not share personal user data with third parties, except when required
+      by law or when necessary to provide essential services related to the
+      application’s operation.
+    </p>
+
+    <h2>Data Storage and Security</h2>
+    <p>
+      User data is stored on proprietary backend infrastructure located in
+      Brazil. Appropriate technical and organizational measures are applied to
+      protect personal data against unauthorized access, loss, or misuse.
+    </p>
+
+    <h2>User Rights</h2>
+    <p>
+      Users may request access to, correction of, or deletion of their personal
+      data when applicable. Requests can be made through the contact information
+      provided below.
+    </p>
+
+    <h2>Children’s Privacy</h2>
+    <p>
+      Thalamus is not intended for use by children under the age of 13.
+    </p>
+
+    <h2>Changes to This Policy</h2>
+    <p>
+      This Privacy Policy may be updated periodically. Users are encouraged to
+      review it regularly.
+    </p>
+
+    <h2>Contact</h2>
+    <p>
+      If you have any questions about this Privacy Policy, please contact us at:
+      <br />
+      <strong>[your-email@domain.com]</strong>
+    </p>
+  </body>
 </html>
