Update contact email in Privacy Policy section

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <p>
       If you have any questions about this Privacy Policy, please contact us at:
       <br />
-      <strong>[your-email@domain.com]</strong>
+      <strong>comercial@roboflex.com.br</strong>
     </p>
   </body>
 </html>
